File Name: CHANGES

01/31/2017 FASP 1.9.7:
- Clean up *.inl files.
- Fix more warnings by xcode; some still left: unused functions, doxygen.
- Change header file auto-generator output.
- Clean up TCL installation script and help message.
- Change a few functions from public to private.
- Mark TODO's in various C files.
- Update reference manual.

01/30/2017 FASP 1.9.6:
- Modify fasp.h (affect all FASP projects).
  -- Change itsolver_param ==> ITS_param.
  -- Change Schwarz_* ==> SWZ_*.
  -- Change precond_diagstr ==> precond_diag_str.
  -- Reordering.
- Update parameters in ini/*.
- Change a few inconsistent function names: _array_ ==> _darray_.
- Move things around.
- Clean up all files.
- Add legal information.
- Update file dependency information.
- Remove a few unwanted functions, e.g., fasp_mem_check.
- Change name of some private functions.
- Change CMake behavior a little: finding Fortran part.
- Add xcode project for faspsolver.
- Fix Doxgyen problems found by xcode.

01/28/2017 FASP 1.9.5:
- Happy Chinese New Year!
- Test GCC 5.4.0.
- Fix most warnings and mark unresolved warnings.
- Fix Doxygen problems.
- Further clean up on Aux*.c and Bla*.c files.
- Update documentation.
- Update VS10 solution.
- Add more todo's to the list.
- Move things around.
- Move function form_tentative_p_bsr to fasp4blkoil.

01/27/2017 FASP 1.9.4:
- Fix a few memory leaks.
- Update input parameters in test/ini/input.dat.
- Remove fasp_dcsr_check().
- Clean up BlaSmallMat.c: Add const, remove some functions.
- Update regression results.
- File name changed: AuxSmallMat.c ==> BlaSmallMatInv.c.
- Update a few function names in BlaSmallMatInv.c.
- Clean up Aux*.c and Bla*.c files, delete deprecated functions.
- Move things around.

01/23/2017 FASP 1.9.3:
- Clean up Level 4 (Pre) functions.
- Clean up Level 3 (Kry) functions.
- Clean up Level 2 (Itr) functions.
- Clean up Level 1 (Bla) functions.
- Clean up Level x (Xtr) functions.
- Function name change: *_Schwarz* ==> *_schwarz*.